--- a/css.css
+++ b/css.css
@@ -5,7 +5,7 @@ body {margin:0px; padding:0px; font-family:roboto-condensed, sans-serif; backgro
 .main-container {margin:auto; padding-top:5px; text-align:center; max-width:960px; }
 .topmenu-wrap {background:#E6E6E6; height:40px; margin-bottom:10px;}
 .topmenu {font-size:14px; text-align:left; text-transform:uppercase; color:#444; width:960px; margin:auto; text-align:left; padding-top:12px;}
-.topmenu a {color:#337ab7;  display:inline block; text-decoration:none; margin:12px 5px 5px 0px; color:#444;}
+.topmenu a {color:#337ab7;  display:inline block; text-decoration:none; margin:12px 5px 5px 0px;}
 .topmenu a:hover {opacity:0.8; transition:0.8;}
 .goods {margin:10px auto 15px auto; text-align:center; max-width:960px;}
 .book-01 { font-size:13px; width:180px; height:285px; margin:5px 10px 5px 0px; text-align:center; border:1px solid #ccc; float:left; display:inline-block; background:#fff; }
