--- a/css.css
+++ b/css.css
@@ -2,7 +2,7 @@ body {margin:0px; padding:0px; font-family:roboto-condensed, sans-serif; backgro
 .banner {background-color:#00305B; background-image: url(img/111.png); background-position:top center; background-repeat:no-repeat; height:360px;}
 .br {clear:both;}
  h2 {font-size:15px; font-weight: normal;text-transform:uppercase; color:#337ab7; margin:10px 0px 5px 0px; text-align:left;}
-.main-container {margin:auto; padding-top:5px; text-align:center; max-width:960px; }
+.main-container {margin:auto; padding-top:5px; text-align:center; max-width:960px; min-width:720px;}
 .topmenu-wrap {background:#E6E6E6; height:40px; margin-bottom:10px;}
 .topmenu {font-size:14px; text-align:left; text-transform:uppercase; color:#444; width:960px; margin:auto; text-align:left; padding-top:12px;}
 .topmenu a {color:#337ab7;  display:inline block; text-decoration:none; margin:12px 0px 5px 0px;}
