--- a/css.css
+++ b/css.css
@@ -1,12 +1,13 @@
-body {margin:0px; padding:0px; font-family:roboto-condensed, sans-serif; background-color:#f1f1f1; font-color:#444;  }
+body {margin:0px; padding:0px; font-family:Arial-Narrow, sans-serif; background-color:#f1f1f1; font-color:#444;  }
 .banner {background-color:#00305B; background-image: url(img/111.png); background-position:top center; background-repeat:no-repeat; height:360px;}
 .br {clear:both;}
  h2 {font-size:15px; font-weight: normal;text-transform:uppercase; color:#337ab7; margin:10px 0px 5px 0px; text-align:left;}
-.main-container {margin:auto; padding-top:5px; text-align:center; max-width:960px; min-width:720px;}
+.main-container {margin:auto; padding-top:5px; text-align:center; max-width:960px; }
 .topmenu-wrap {background:#E6E6E6; height:40px; margin-bottom:10px;}
 .topmenu {font-size:14px; text-align:left; text-transform:uppercase; color:#444; width:960px; margin:auto; text-align:left; padding-top:12px;}
-.topmenu a {color:#337ab7;  display:inline block; text-decoration:none; margin:12px 0px 5px 0px;}
+.topmenu a {display:inline block; text-decoration:none; margin:12px 5px 5px 0px; color:#444;}
 .topmenu a:hover {opacity:0.8; transition:0.8;}
+.topmenu a.face {color:#337ab7 !important;}
 .goods {margin:10px auto 15px auto; text-align:center; max-width:960px;}
 .book-01 { font-size:13px; width:180px; height:285px; margin:5px 10px 5px 0px; text-align:center; border:1px solid #ccc; float:left; display:inline-block; background:#fff; }
 .book-01 img {margin:5px auto; height:200px;}
