--- a/css.css
+++ b/css.css
@@ -1,4 +1,4 @@
-body {margin:0px; padding:0px; font-family:Arial-Narrow, sans-serif; background-color:#f1f1f1; font-color:#444;  }
+body {margin:0px; padding:0px; font-family:Arial Narrow, sans-serif; background-color:#f1f1f1; font-color:#444;  }
 .banner {background-color:#00305B; background-image: url(img/111.png); background-position:top center; background-repeat:no-repeat; height:360px;}
 .br {clear:both;}
  h2 {font-size:16px; font-weight: normal;text-transform:uppercase; color:#337ab7; margin:10px 0px 5px 0px; text-align:left;}
