--- a/css.css
+++ b/css.css
@@ -4,8 +4,8 @@ body {margin:0px; padding:0px; font-family:Arial Narrow, sans-serif; background-
  h2 {font-size:16px; font-weight: normal;text-transform:uppercase; color:#337ab7; margin:10px 0px 5px 0px; text-align:left;}
 .main-container {margin:auto; padding-top:5px; text-align:center; max-width:960px; min-widrh:640px; }
 .topmenu-wrap {background:#E6E6E6; height:40px; margin-bottom:10px;}
-.topmenu {font-size:16px; text-align:left; text-transform:uppercase; color:#444; width:960px; margin:auto; text-align:left; padding-top:12px;}
-.topmenu a {display:inline block; text-decoration:none; margin:12px 0px 5px 0px; color:#337ab7;}
+.topmenu {font-size:16px; text-align:left; text-transform:uppercase; color:#444; width:960px; margin:auto; text-align:left; padding-top:12px; margin-left:-5px;}
+.topmenu a {display:inline block; text-decoration:none; margin:12px 5px 5px 5px; color:#337ab7;}
 .topmenu a:hover {opacity:0.8; transition:0.8;}
 .topmenu a.face {color:#337ab7 !important;}
 .goods {margin:10px auto 15px auto; text-align:center; max-width:960px;}
