--- a/css.css
+++ b/css.css
@@ -6,7 +6,7 @@ body {margin:0px; padding:0px; font-family:Arial Narrow, sans-serif; background-
 .topmenu-wrap {background:#E6E6E6; height:40px; margin-bottom:10px;}
 .topmenu {font-size:16px; text-align:left; text-transform:uppercase; color:#444; width:960px; margin:auto; text-align:left; padding-top:12px; margin-left:-5px;}
 .topmenu a {display:inline block; text-decoration:none; margin:12px 5px 5px 5px; color:#337ab7;}
-.topmenu a:hover {opacity:0.8; transition:0.8;}
+.topmenu a:hover {opacity:0.8; transition:0.8s;}
 .topmenu a.face {color:#337ab7 !important;}
 .goods {margin:10px auto 15px auto; text-align:center; max-width:960px;}
 .book-01 { font-size:13px; width:180px; height:285px; margin:5px 10px 5px 0px; text-align:center; border:1px solid #ccc; float:left; display:inline-block; background:#fff; }
@@ -25,3 +25,4 @@ body {margin:0px; padding:0px; font-family:Arial Narrow, sans-serif; background-
 .contacts a {color:#337ab7; display:block; height:14px;}
 .contacts a.face {background:url(img/face.png) no-repeat; padding-left: 48px; line-height:42px; height: 42px; text-decoration:none;}
 .contacts a.wosp {background:url(img/wosp_s.png) no-repeat; padding-left: 48px; line-height:42px; height: 42px; text-decoration:none;}
+.contacts a:hover {opacity:0.8; transition:0.9s;} 
