--- a/css.css
+++ b/css.css
@@ -1,10 +1,10 @@
 body {margin:0px; padding:0px; font-family:Arial Narrow, sans-serif; background-color:#f1f1f1; font-color:#444;  }
 .banner {background-color:#00305B; background-image: url(img/111.png); background-position:top center; background-repeat:no-repeat; height:360px;}
 .br {clear:both;}
- h2 {font-size:16px; font-weight: normal;text-transform:uppercase; color:#337ab7; margin:10px 0px 5px 0px; text-align:left;}
+ h2 {font-size:16px; text-transform:uppercase; color:#337ab7; margin:10px 0px 5px 0px; text-align:left;}
 .main-container {margin:auto; padding-top:5px; text-align:center; max-width:960px; min-widrh:640px; }
 .topmenu-wrap {background:#E6E6E6; height:40px; margin-bottom:10px;}
-.topmenu {font-size:16px; text-align:left; text-transform:uppercase; color:#444; width:960px; margin:auto; text-align:left; padding-top:12px;}
+.topmenu {font-size:16px; font-weight:bold; text-align:left; text-transform:uppercase; color:#444; width:960px; margin:auto; text-align:left; padding-top:12px;}
 .topmenu a {display:inline block; text-decoration:none; margin:12px 0px 5px 0px; color:#337ab7;}
 .topmenu a:hover {opacity:0.8; transition:0.8s;}
 .topmenu a.face {color:#337ab7 !important;}
@@ -21,12 +21,12 @@ body {margin:0px; padding:0px; font-family:Arial Narrow, sans-serif; background-
  -moz-transform: scale(1.4);
  -o-transform: scale(1.4);
  } 
-.contacts {text-align:left; font-size:13px; color:#337ab7; margin-bottom:20px;}
-.contacts a {color:#337ab7; display:block; height:14px;}
-.contacts a.face {background:url(img/face.png) no-repeat; padding-left: 48px; line-height:42px; height: 42px; text-decoration:none;}
-.contacts a.wosp {background:url(img/wosp_s.png) no-repeat; padding-left: 48px; line-height:42px; height: 42px; text-decoration:none;}
-.contacts a:hover { opacity:0.6;
+.contacts {text-align:left; font-size:15px; color:#337ab7; margin-bottom:20px;}
+.contacts a {color:#337ab7; display:block; opacity:1;
 -webkit-transition: opacity 1s ease-in-out;
         -moz-transition: opacity 1s ease-in-out;
         -ms-transition: opacity 1s ease-in-out;
         transition: opacity 1s ease-in-out;}
+.contacts a:hover {opacity:0.6;}
+.contacts a.face {background:url(img/face.png) no-repeat; padding-left: 48px; line-height:42px; height: 42px; text-decoration:none;}
+.contacts a.wosp {background:url(img/wosp_s.png) no-repeat; padding-left: 48px; line-height:42px; height: 42px; text-decoration:none;}
