--- a/css.css
+++ b/css.css
@@ -1,6 +1,6 @@
 body {margin:0px; padding:0px; font-family:Arial Narrow, sans-serif; background-color:#f1f1f1; font-color:#444;  }
-
 .br {clear:both;}
+ h1 {font-size:20px; font-weight:normal; text-transform:uppercase; color:#337ab7; margin:10px 0px 5px 0px; text-align:left;}
  h2 {font-size:17px; font-weight:normal; text-transform:uppercase; color:#337ab7; margin:10px 0px 5px 0px; text-align:left;}
 .main-container {margin:auto; padding-top:5px; text-align:center; max-width:960px; min-width:580px; }
 .topmenu-wrap {background:#E6E6E6; height:auto; margin-bottom:10px;}
