--- a/css.css
+++ b/css.css
@@ -8,8 +8,8 @@ body {margin:0px; padding:0px;  background-color:#f1f1f1; color:#444; font-famil
 .banner {background-color:#00305B; background-image: url(img/sztab_04.png); background-position:top center; background-repeat:no-repeat; height:300px; text-align:center;}
  .topmenu {font-size:17px; font-family:Arial Narrow, sans-serif; text-align:left; text-transform:uppercase; color:#444; margin:auto; text-align:left; padding-top:12px; max-width:960px;  padding-bottom: 10px;}
  .main-container {margin:auto; padding-top:5px; text-align:center; max-width:960px; }   
-.anonce {font-size:13px; font-family:Helvetica, 'Trebuchet MS'; line-height:24px; padding: 10px 0px; text-align: left;}
-.anonce a {color:#00305B;}
+.anonce {font-size:14px; font-family:Helvetica, 'Trebuchet MS'; line-height:24px; padding: 10px 0px; text-align: left;}
+.anonce a {color:#337ab7;}
 .topmenu a {display:inline block; text-decoration:none; margin:11px 0px 11px 0px; color:#444; }
 .topmenu a:hover {opacity:0.8; transition:0.8s;}
 .topmenu a.face {color:#337ab7 !important;}
@@ -36,4 +36,4 @@ body {margin:0px; padding:0px;  background-color:#f1f1f1; color:#444; font-famil
 .contacts a.face {background:url(img/face.png) no-repeat; padding-left: 48px; line-height:42px; height: 42px; text-decoration:none; margin-bottom:5px;}
 .contacts a.wosp {background:url(img/wosp_s.png) no-repeat; padding-left: 48px; line-height:42px; height: 42px; text-decoration:none;}
 .mask {background: url(img/mask.png) no-repeat; padding-left: 50px; height:48px; }
-.map {border:1px solid #ccc;}  
+.map {border:1px solid #ccc;}   
