--- a/css.css
+++ b/css.css
@@ -6,6 +6,7 @@ body {margin:0px; padding:0px;  background-color:#f1f1f1; color:#444; font-famil
 .topmenu-wrap {background:#E6E6E6; height:auto; margin-bottom:10px;}
  /*.banner {background-color:#00305B; background-image: url(img/114.png); background-position:top center; background-repeat:no-repeat; height:309px;}*/
 .banner {background-color:#00305B; background-image: url(img/sztab_04.png); background-position:top center; background-repeat:no-repeat; height:300px; text-align:center;}
+.banner div {padding:200px 30px 0px 265px; color:#fff; text-align:center; font-size: 33px; line-height: 55px; letter-spacing: 2px; font-family:Helvetica, 'Trebuchet MS';} 
  .topmenu {font-size:17px; font-family:Arial Narrow, sans-serif; text-align:left; text-transform:uppercase; color:#444; margin:auto; text-align:left; padding-top:12px; max-width:960px;  padding-bottom: 10px;}
  .main-container {margin:auto; padding-top:5px; text-align:center; max-width:960px; }   
 .anonce {font-size:14px; font-family:Helvetica, 'Trebuchet MS'; line-height:24px; padding: 10px 0px; text-align: left;}
@@ -33,7 +34,7 @@ body {margin:0px; padding:0px;  background-color:#f1f1f1; color:#444; font-famil
         -ms-transition: opacity 1s ease-in-out;
         transition: opacity 1s ease-in-out;}
 .contacts a:hover {opacity:0.6;}
-.contacts a.face {background:url(img/face.png) no-repeat; padding-left: 48px; line-height:42px; height: 42px; text-decoration:none; margin-bottom:5px;}
-.contacts a.wosp {background:url(img/wosp_s.png) no-repeat; padding-left: 48px; line-height:42px; height: 42px; text-decoration:none;}
+.contacts a.face {background:url(img/face.png) no-repeat; padding-left: 48px; line-height:42px; height: 42px; text-decoration:none; float: left;}
+.contacts a.wosp {background:url(img/wosp_s.png) no-repeat; padding-left: 48px; line-height:42px; height: 42px; text-decoration:none; float: left; margin-left: 20px;}
 .mask {background: url(img/mask.png) no-repeat; padding-left: 50px; height:48px; }
-.map {border:1px solid #ccc;}   
+.map {border:1px solid #ccc;}      
