--- a/css.css
+++ b/css.css
@@ -10,7 +10,8 @@ body {margin:0px; padding:0px;  background-color:#f1f1f1; color:#444; font-famil
  .topmenu {font-size:17px; font-family:Arial Narrow, sans-serif; text-align:left; text-transform:uppercase; color:#444; margin:auto; text-align:left; padding-top:12px; max-width:960px;  padding-bottom: 10px;}
  .main-container {margin:auto; padding-top:5px; text-align:center; max-width:960px; }   
 .anonce {font-size:14px; font-family:Helvetica, 'Trebuchet MS'; line-height:24px; padding: 10px 0px; text-align: left;}
-.anonce a {color:#337ab7;}
+.anonce a {color:#337ab7; text-decoration: none;}
+.anonce a:hover {color:#337ab7; text-decoration: underline;}
 .topmenu a {display:inline block; text-decoration:none; margin:11px 0px 11px 0px; color:#444; }
 .topmenu a:hover {opacity:0.8; transition:0.8s;}
 .topmenu a.face {color:#337ab7 !important;}
