--- a/css.css
+++ b/css.css
@@ -38,5 +38,5 @@ body {margin:0px; padding:0px;  background-color:#f1f1f1; color:#444; font-famil
 .contacts a:hover {opacity:0.6;}
 .contacts a.face {background:url(img/face.png) no-repeat; padding-left: 48px; line-height:42px; height: 42px; text-decoration:none; float: left;}
 .contacts a.wosp {background:url(img/wosp_s.png) no-repeat; padding-left: 48px; line-height:42px; height: 42px; text-decoration:none; float: left; margin-left: 20px;}
-.mask {background: url(img/mask.png) no-repeat; padding-left: 50px; height:48px; }
+.mask {background: url(img/mask.png) no-repeat; padding-left: 50px; min-height:48px; }
 .map {border:1px solid #ccc;}      
