--- a/css.css
+++ b/css.css
@@ -1,6 +1,6 @@
 body {margin:0px; padding:0px;  background-color:#f1f1f1; color:#444; font-family:Helvetica, 'Trebuchet MS' }
 .br {clear:both;}
- h1 {font-size:20px; font-weight:normal; text-transform:uppercase; color:#337ab7; margin:10px 0px 5px 0px; text-align:left;}
+ h1 {font-size:20px; font-weight:normal; color:#d00; margin:10px 0px 5px 0px; text-align:left;}
  h2 {font-size:17px; font-weight:normal; text-transform:uppercase; color:#337ab7; margin:10px 0px 5px 0px; text-align:left;}
 .main-container {margin:auto; padding-top:5px; text-align:center; max-width:960px; min-width:580px; }
 .topmenu-wrap {background:#E6E6E6; height:auto; margin-bottom:10px;}
@@ -16,9 +16,10 @@ body {margin:0px; padding:0px;  background-color:#f1f1f1; color:#444; font-famil
 .topmenu a:hover {opacity:0.8; transition:0.8s;}
 .topmenu a.face {color:#337ab7 !important;}
 .goods {margin:10px auto 15px auto; text-align:center; max-width:960px; min-width:580px;}
-.book-01 { font-size:13px; width:180px; height:265px; margin:5px 10px 5px 0px; text-align:center; border:1px solid #ccc; float:left; display:inline-block; background:#fff; }
-.book-01 img {margin:5px auto; height:200px;}
-.book-01 b {display:block; padding:0px 0px;}
+.book-01 { font-size:13px; width:200px; height:300px; margin:15px 30px 15px 0px; text-align:center; border:1px solid #ccc; float:left; display:inline-block; background:#fff; }
+.book-01 img {margin:10px auto; height:200px;}
+.book-01 b {display:block; padding:0px 0px 5px 0px;}
+.book-01 i {color:#337ab7; font-size:14px;}
 .book-01 img  {
  -moz-transition: all 1s ease-out; 
  -o-transition: all 1s ease-out;
@@ -28,6 +29,12 @@ body {margin:0px; padding:0px;  background-color:#f1f1f1; color:#444; font-famil
  -moz-transform: scale(1.4);
  -o-transform: scale(1.4);
  } 
+ .book-02 img:hover{
+ -webkit-transform: scale(2.3);
+ -moz-transform: scale(2.3);
+ -o-transform: scale(2.3);
+ }
+
 .rezerw {background: url(img/rezerw.png) no-repeat; width: 166px; height: 200px; position: absolute; z-index: 2; top:5px; left:5px;}
 .contacts {text-align:left; font-size:15px; color:#337ab7; margin-bottom:20px;}
 .contacts a {color:#337ab7; display:block; opacity:1;
@@ -40,4 +47,4 @@ body {margin:0px; padding:0px;  background-color:#f1f1f1; color:#444; font-famil
 .contacts a.wosp {background:url(img/wosp_s.png) no-repeat; padding-left: 48px; line-height:42px; height: 42px; text-decoration:none; float: left; margin-left: 20px;}
 .mask {background: url(img/mask.png) no-repeat; padding-left: 50px; min-height:  height:48px; }
 .map {border:1px solid #ccc;}
-.eskarbonka {background: url(img/e_skarbonka.png) no-repeat top left; padding-left:240px; margin:25px 0px 0px 0px;}
+.eskarbonka {background: url(img/e_skarbonka.png) no-repeat top left; padding-left:240px; margin:25px 0px 1px 0px;}
