--- a/css.css
+++ b/css.css
@@ -1,4 +1,5 @@
 body {margin:0px; padding:0px;  background-color:#f1f1f1; color:#444; font-family:Helvetica, 'Trebuchet MS' }
+html {scroll-behavior: smooth;}
 .br {clear:both;}
  h1 {font-size:20px; font-weight:normal; color:#d00; margin:10px 0px 5px 0px; text-align:left;}
  h2 {font-size:17px; font-weight:normal; text-transform:uppercase; color:#337ab7; margin:10px 0px 5px 0px; text-align:left;}
