--- a/css.css
+++ b/css.css
@@ -65,4 +65,4 @@ html {scroll-behavior: smooth;}
 a.eskarbonka {background: url(img/e_skarbonka_ak_w.png) no-repeat top left; padding-left:320px; padding-top:10px; margin:25px 0px 1px 0px; height:72px; display: block; transition:0.5s;}
 a.eskarbonka:hover {text-decoration:none; opacity:0.8;}
 .red {color:#d00; font-size:24px;}
-.new {font-size:10px !important; font-weight:bold !important; color:#d00 !important;}
+sup {font-size:10px !important; font-weight:bold !important; color:#d00 !important;}
