--- a/css.css
+++ b/css.css
@@ -5,7 +5,7 @@ html {scroll-behavior: smooth;}
  h2 {font-size:17px; font-weight:normal; text-transform:uppercase; color:#337ab7; margin:10px 0px 5px 0px; text-align:left;}
 .main-container {margin:auto; padding-top:5px; text-align:center; max-width:960px; min-width:580px; }
 .topmenu-wrap {background:#E6E6E6; height:auto; margin-bottom:10px;}
- .banner {background-color:#011337; background-image: url(img/wosp30_1.png); background-position:top center; background-repeat:no-repeat; height:369px;}
+ .banner {background-color:#011337; background-image: url(img/wosp30_data.png); background-position:top center; background-repeat:no-repeat; height:369px;}
 .banner div {padding:200px 30px 0px 265px; color:#fff; text-align:center; font-size: 33px; line-height: 55px; letter-spacing: 2px; font-family:Helvetica, 'Trebuchet MS';} 
  .topmenu {font-size:17px; font-family:Arial Narrow, sans-serif; text-align:left; text-transform:uppercase; color:#444; margin:auto; text-align:left; padding-top:12px; max-width:960px;  padding-bottom: 10px;}
  .main-container {margin:auto; padding-top:5px; text-align:center; max-width:960px; }   
