--- a/css.css
+++ b/css.css
@@ -1,4 +1,4 @@
-body {margin:0px; padding:0px;  background-color:#000; color:#444; font-family:Helvetica, 'Trebuchet MS' }
+body {margin:0px; padding:0px;  background-color:#000000; color:#fff; font-family:Helvetica, 'Trebuchet MS' }
 html {scroll-behavior: smooth;}
 .br {clear:both;}
  h1 {font-size:20px; font-weight:normal; color:#d00; margin:10px 0px 5px 0px; text-align:left;}
